hard-gists/ce648166902041fbc613/run.log
=== Docker Run Log for ce648166902041fbc613 ===
Started at: Mi 29. Okt 20:19:06 CET 2025

[2025-10-29 20:19:16] START: Running container for ce648166902041fbc613
[2025-10-29 20:19:17] SUCCESS: Container 8007a20a862bb01f21254da4f6a847570c1a7586ce29c802041026a595eb3234 started for ce648166902041fbc613
=== Container logs for ce648166902041fbc613 ===
Traceback (most recent call last):
  File "/snippet.py", line 9, in <module>
    from env import ENV
  File "/usr/local/lib/python3.11/site-packages/env.py", line 51
    print k
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ce648166902041fbc613 ===
[2025-10-29 20:19:19] INFO: Container 8007a20a862bb01f21254da4f6a847570c1a7586ce29c802041026a595eb3234 has stopped
